--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+a{
+	color: #007bff !important;
+}
+a:hover{
+	color: #0056b3 !important;
+}
 
 body{
 	font-family: "Raleway", sans-serif !important;
